[package]
name = "discord_profile_banner_cropper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.3" }
clokwerk = { version = "0.3.5" }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
dotenv = { version = "0.15" }
base64 = { version = "0.13.0" }